# binling

./: .gitignore  Cargo.toml  LICENSE  PROMPTING_GUIDE.md  README.md  vm4ai_driver.py
benchmarks/: README.md
cli/: Cargo.toml
cli/src/: main.rs  ws_server.rs
core/: Cargo.toml
core/benches/: codec_bench.rs  physics_bench.rs
core/src/: capsules.rs  codec.rs  instructions.rs  lib.rs  net.rs  vm.rs
interface/: oracle_out.txt  sentinel_v2.asm
spec/: binling_encoding_v0_1.md  levin_method_v0_1.md
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs  vm4ai_driver.py
