[package]
name = "binling_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# We explicitly request "cli-mode" for the desktop app
binling_core = { path = "../core", features = ["cli-mode"] }

# ... (Keep your other dependencies like tokio for the CLI itself) ...
tokio = { version = "1", features = ["full"] }
