[package]
name = "binling_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Core Logic (Heavy Mode)
binling_core = { path = "../core", features = ["cli-mode"] }

# The Runtime
tokio = { version = "1", features = ["full"] }

# WebSocket Support (NEW)
tokio-tungstenite = "0.20"
futures-util = "0.3"
