[package]
name = "binling_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
binling_core = { path = "../core", features = ["cli-mode"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde_json = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
