[package]
name = "binling_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Always needed (Data structures)
serde = { version = "1.0", features = ["derive"] }

# Optional: Only needed for CLI (Networking & Files)
tokio = { version = "1", features = ["full"], optional = true }
bincode = { version = "1", optional = true }
anyhow = { version = "1.0", optional = true }                   # <--- NEW: Added this

[features]
# By default, we are "Pure" (WASM safe)
default = []

# We define a "cli-mode" that turns on the heavy tools
# Update this line to include "dep:anyhow"
cli-mode = ["dep:tokio", "dep:bincode", "dep:anyhow"]
