[package]
name = "binling_core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Always needed (Data structures)
serde = { version = "1.0", features = ["derive"] }

# Optional: Only needed for CLI (Networking & Files)
tokio = { version = "1", features = ["full"], optional = true }
bincode = { version = "1", optional = true }
anyhow = { version = "1.0", optional = true }

[features]
# By default, we are "Pure" (WASM safe)
default = []

# We define a "cli-mode" that turns on the heavy tools
cli-mode = ["dep:tokio", "dep:bincode", "dep:anyhow"]

# --- NEW SECTIONS BELOW ---

[dev-dependencies]
# This tool is required to run the benchmarks
criterion = { version = "0.5", features = ["html_reports"] }

# Register the Benchmark files
[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "physics_bench"
harness = false
