[package]
name = "binling_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6" # For passing complex objects (JSON/Capsules) to JS
binling_core = { path = "../core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
