[package]
name = "binling_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
binling_core = { path = "../core" }
console_error_panic_hook = "0.1"

# --- NEW SECTION: Disable Optimizer ---
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
